# LD_VS_Sortition

./: .gitignore  CHANGELOG_NOTES.md  README.md  pyproject.toml  requirements.txt
scripts/: run_full.sh  run_quick.bat  run_quick.sh  upload_existing_repo.sh
src/ld_vs_sortition/: __init__.py  cli.py  core.py  delegation.py  selection.py
src/ld_vs_sortition/experiments/: __init__.py  experiment1.py  experiment2.py  loss_bound.py
tests/: test_core_and_delegation.py  test_selection.py  test_smoke.py
