[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ld-vs-sortition"
version = "1.0.0"
description = "Reproducible simulations comparing Liquid Democracy and Sortition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "scipy>=1.11,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
ld-vs-sortition = "ld_vs_sortition.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
